# oaslananka-_-zaptrace

./: .bestpractices.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  Taskfile.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
benchmarks/: correctness-placement-routing-corpus.yaml
docs/: ARCHITECTURE.md  FAQ.md  GETTING_STARTED.md  ROADMAP.md  SAFETY.md  _config.yml  api-rest-production.md  ci-for-contributors.md  component-library-governance-schema-v1.md  index.md  openssf-evidence-map.md  openssf-evidence.md  openssf-gap-analysis.md  openssf-proposal-links.md  repo-maturity-report.md
pcb_bench/: README.md  SECURITY.md  __init__.py  leaderboard.py  loader.py  participant.py  runner.py  schema.py
schemas/: cross-eda-degradation-report-v1.schema.json  plugin-manifest-v1.schema.json
scripts/: ci_altium_corpus_gate.py  ci_benchmark_001.py  ci_benchmark_fixture_coverage.py  ci_benchmark_fixture_integrity.py  ci_benchmark_reproduce.py  ci_bom_risk_gate.py  ci_component_metadata_gate.py  ci_convergence_12_families.py  ci_correctness_fixture_corpus.py  ci_datasheet_hash_gate.py  ci_dco_check.py  ci_docs_status_sync.py  ci_easyeda_std_corpus_gate.py  ci_examples.py  ci_generated_board_release_gate.py  ci_kicad_corpus_gate.py  ci_kicad_oracle.py  ci_kicad_roundtrip_scorecard.py  ci_kicad_task_runner.py  ci_kicad_to_easyeda_pro_corpus_gate.py  ci_pcb_bench_leaderboard.py  ci_pr_review_summary.py  ci_release_gate.py  ci_reuse_check.py  ci_smoke.py  ci_validation_environment.py  ci_wheel_smoke.py  generate_checksum_manifest.py  generate_library_expansion.py  generate_mcp_docs.py  generate_tool_policy_matrix.py
specs/: project.schema.yaml
tests/: conftest.py  test_ac_sim_gate.py  test_ac_stability_gate.py  test_agent_calc_spice_tools.py  test_agent_candidates.py  test_agent_security.py  test_agent_tools.py  test_agent_workflow_runtime.py  test_altium_corpus.py  test_altium_importer.py  test_analog.py  test_api_hardening.py  test_api_server.py  test_architecture_intent_bridge.py  test_autonomous_signoff.py  test_autopilot_adapter.py  test_benchmark.py  test_benchmark_board_families.py  test_benchmark_convergence.py  test_benchmark_fixture_coverage.py  test_benchmark_fixture_integrity.py  test_benchmark_repair_interop.py  test_benchmark_reproduce.py  test_board_generation_compiler.py  test_board_generation_intent.py  test_board_generation_kicad_pcb.py  test_board_generation_kicad_schematic.py  test_board_model.py  test_ci_benchmark_001.py  test_ci_component_metadata_gate.py  test_ci_datasheet_hash_gate.py  (+167 more)
(+515 files in other folders)
