[project]
name = "zaptrace"
version = "0.2.2"
description = "Agent-native electronics design core"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
keywords = ["electronics", "eda", "pcb", "mcp", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "Pillow>=10.0",
    "httpx>=0.27",
    "pydantic-settings>=2.14.2",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
server = ["fastapi>=0.116", "uvicorn>=0.30", "httpx>=0.27", "cryptography>=48.0.1", "starlette>=1.3.1"]
all = ["fastmcp>=2.0", "fastapi>=0.116", "uvicorn>=0.30", "httpx>=0.27", "cryptography>=48.0.1", "starlette>=1.3.1"]

[project.scripts]
zaptrace = "zaptrace.cli.main:cli"
zaptrace-mcp = "zaptrace.mcp.server:run"
zaptrace-api = "zaptrace.api.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zaptrace"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "data"

[tool.hatch.build.targets.sdist.force-include]
"data" = "data"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E","W","F","I","UP","N","ANN","B","SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"zaptrace/erc/rules.py" = ["N802"]
"zaptrace/ee/drc/engine.py" = ["N806"]
"zaptrace/ee/footprints.py" = ["N806"]
"zaptrace/export/gerber.py" = ["N806"]
"zaptrace/export/svg.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "rust: marks tests requiring Rust extension",
]
filterwarnings = [
    "ignore:Using .*httpx.* with .*starlette.testclient.* is deprecated.*",
]

[tool.pyright]
include = ["zaptrace"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
reportMissingModuleSource = false
venvPath = "."
venv = ".venv"

[tool.coverage.run]
source = ["zaptrace"]
omit = ["*/tests/*", "*/mcp/server.py"]

[tool.coverage.report]
fail_under = 75

[tool.maturin]
manifest-path = "zaptrace_core/Cargo.toml"
module-name = "zaptrace._core"
python-source = "."

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
    "maturin>=1.7",
]
lint = [
    "ruff>=0.9.0",
]
typecheck = [
    "pyright>=1.1.390",
]
test = [
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0",
]
